Pricing page layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11530,6 +11530,18 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE1 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE3 {}
+.bd-layoutbox-17 {
+  display: block;
+}
+.bd-layoutbox-17 {
+  margin-top: 0;
+}
+.bd-containereffect-1 {
+  margin-top: 63px;
+  display: block;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE5 {}
 .bd-layoutbox-19 {
   background-color: #f2f2f2;
@@ -11853,12 +11865,10 @@ a.bd-backtotop-1:hover {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDY {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDY {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDYw {}
-.bd-layoutbox-60 {
-  margin-top: 26px;
+.bd-layoutbox-6 {
+  margin-bottom: 72px;
 }
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDYw {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDY {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDYx {}
 .bd-layoutbox-61 {
   height: 300px;
@@ -12607,6 +12617,9 @@ a.bd-backtotop-1:hover {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjk {}
+.bd-layoutcontainer-9 {
+  margin-top: 72px;
+}
 .bd-layoutcontainer-9 > .bd-container-inner > .container-fluid {
   padding-left: 0;
   padding-right: 0;
@@ -14108,8 +14121,15 @@ h2.bd-postheader-5 a {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb242 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb243 {}
+.bd-section-7 {
+  margin-bottom: 40px;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb243 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb244 {}
+.bd-section-8 {
+  margin-bottom: 63px;
+  margin-top: 40px;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb244 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb245 {}
 .bd-section-9 {
@@ -15065,6 +15085,16 @@ h2.bd-textblock-164 {
   margin: 0px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2OQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3 {}
+.bd-textblock-17 {
+  height: 44px;
+}
+@media (max-width: 767px) {
+  .bd-textblock-17 {
+    height: 95px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3MQ {}
 .bd-textblock-171 {
   margin-top: 19px;
@@ -15257,16 +15287,6 @@ h1.bd-textblock-190 {
   margin-bottom: 31px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5Mg {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5NA {}
-.bd-textblock-194 {
-  height: 44px;
-}
-@media (max-width: 767px) {
-  .bd-textblock-194 {
-    height: 95px;
-  }
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5NA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5Ng {}
 .bd-textblock-196 {
   margin-bottom: 11px;
